[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epigenetic_clock_assignment"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8, <3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Zoltán Szarvas", email = "szazo@szazo.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "numpy ~= 1.24.4",
  "glmnet ~= 2.2.1",
  "matplotlib ~= 3.7.5",
  "scikit-learn ~= 1.3.2",
  "pandas ~= 2.0.3",
  "seaborn ~= 0.13.2",
  "sigfig ~= 1.3.3",
  "dask ~= 2023.5.0",
  "wget ~= 3.2",
  "pyarrow ~= 16.0.0",
  "pyocclient ~= 0.6"
]

[project.urls]
Documentation = "https://github.com/unknown/epigenetic_clock_assignment#readme"
Issues = "https://github.com/unknown/epigenetic_clock_assignment/issues"
Source = "https://github.com/unknown/epigenetic_clock_assignment"

[tool.hatch.version]
path = "src/epigenetic_clock_assignment/__about__.py"

[project.optional-dependencies]
dev = [
    "ipykernel ~= 6.29.4",
    "pyright ~= 1.1.360",
    "pre-commit ~= 3.5.0"
    # "pyright ~= 1.1.357",
    # "pre-commit ~= 3.7.0"
    # "jupyterlab"
]
